--- a/manifest-chrome.json
+++ b/manifest-chrome.json
@@ -1,15 +1,14 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "FocusFix",
   "version": "1.0.0",
   "description": "Automatically repair broken keyboard navigation for better accessibility.",
   "permissions": ["storage", "activeTab", "<all_urls>"],
   "background": {
-    "scripts": ["src/background.js"],
-    "persistent": false
+    "service_worker": "background/background.js"
   },
-  "browser_action": {
-    "default_popup": "src/popup.html",
+  "action": {
+    "default_popup": "popup/popup.html",
     "default_icon": {
       "16": "icons/icon16.png",
       "32": "icons/icon32.png",
@@ -18,13 +17,13 @@
     }
   },
   "options_ui": {
-    "page": "src/options.html",
+    "page": "options/options.html",
     "open_in_tab": true
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["src/content.js"],
+      "js": ["content/content.js"],
       "run_at": "document_idle"
     }
   ],
@@ -33,10 +32,5 @@
     "32": "icons/icon32.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
-  },
-  "browser_specific_settings": {
-    "gecko": {
-      "id": "focusfix@accessibility.tools"
-    }
   }
 }
