--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,13 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "FocusFix",
   "version": "1.0.0",
   "description": "Automatically repair broken keyboard navigation for better accessibility.",
   "permissions": ["storage", "activeTab", "<all_urls>"],
   "background": {
-    "scripts": ["background/background.js"],
-    "persistent": false
+    "service_worker": "background/background.js"
   },
-  "browser_action": {
+  "action": {
     "default_popup": "popup/popup.html",
     "default_icon": {
       "16": "icons/icon16.png",
@@ -33,10 +32,5 @@
     "32": "icons/icon32.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
-  },
-  "browser_specific_settings": {
-    "gecko": {
-      "id": "focusfix@accessibility.tools"
-    }
   }
 }
