--- a/manifest-firefox.json
+++ b/manifest-firefox.json
@@ -5,11 +5,11 @@
   "description": "Automatically repair broken keyboard navigation for better accessibility.",
   "permissions": ["storage", "activeTab", "<all_urls>"],
   "background": {
-    "scripts": ["src/background.js"],
+    "scripts": ["background/background.js"],
     "persistent": false
   },
   "browser_action": {
-    "default_popup": "src/popup.html",
+    "default_popup": "popup/popup.html",
     "default_icon": {
       "16": "icons/icon16.png",
       "32": "icons/icon32.png",
@@ -18,13 +18,13 @@
     }
   },
   "options_ui": {
-    "page": "src/options.html",
+    "page": "options/options.html",
     "open_in_tab": true
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["src/content.js"],
+      "js": ["content/content.js"],
       "run_at": "document_idle"
     }
   ],
