--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
   "validate": "npm run lint && npm run format:check",
   "test": "echo 'Manual testing: Load extension in Firefox or Chrome and verify features.'",
-    "build": "echo 'No build step required - extension ready to load'",
-    "build:prod": "npm run validate && npm run test",
+  "build": "webpack --config webpack.config.js",
+  "build:chrome": "webpack --config webpack.config.js",
+  "build:firefox": "webpack --config webpack.config.js",
+  "build:prod": "npm run validate && npm run build && npm run test",
     "package": "zip -r focusfix-v1.0.0.zip . -x '*.git*' 'node_modules/*' '*.DS_Store*' 'test-*' '*.md' 'coverage/*' 'dist/*'",
     "clean": "rm -f focusfix-*.zip",
     "lint": "eslint . --ext .js",
@@ -44,9 +46,14 @@
     "npm": ">=8.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.0.0",
-    "prettier": "^3.0.0",
-    "web-ext": "^7.0.0"
+  "eslint": "^8.0.0",
+  "prettier": "^3.0.0",
+  "web-ext": "^7.0.0",
+  "webpack": "^5.0.0",
+  "webpack-cli": "^4.0.0",
+  "babel-loader": "^8.0.0",
+  "@babel/core": "^7.0.0",
+  "@babel/preset-env": "^7.0.0"
   },
   "browserslist": [
     "Firefox >= 109",
